Transaction doc done
